<resources>
    <!-- App -->
    <string name="app_name" translatable="false">DJ Experience</string>
    <string name="defaultImageDescription" translatable="false">image</string>

    <!-- App Global -->
    <string name="welcome">¡Bienvenido a DJ Experience!</string>
    <string name="settings">Ajustes</string>
    <string name="signIn">Iniciar sesión</string>
    <string name="signOut">Cerrar Sesión</string>
    <string name="signUp">Registrarse</string>
    <string name="signUpInfo">¿Aún no tienes una cuenta? Regístrate aquí.</string>
    <string name="email">Correo electrónico</string>
    <string name="send_email">Enviar correo</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="action_info">Información</string>
    <string name="information">¡Hola! Soy FeryaelDev, creador de DJ Experience.\n\nEsta app se ha desarrollado para proporcionarte toda la información que necesitabas sobre tus DJs favoritos.\nSi quieres puedes seguirme en mis redes principales para cualquier duda o sugerencia.\n\n¡Muchas gracias!\n\nPD: ¡Si pulsas la imagen irás a mi página web oficial!</string>
    <string name="info_bottom">Visita la web de DJExperience para saber toda la información oficial.</string>
    <string name="following">Siguiendo:</string>
    <string name="add">Añadir</string>
    <string name="sustract">Restar</string>
    <string name="save">Guardar</string>
    <string name="userIsAwareQuestion">¿Estás seguro?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="onlyVersion">© DJ Experience - Versión %1$s</string>
    <string name="version">© DJ Experience - Versión %1$s (Haz click aquí para ver el descargo de responsabilidad de derechos de propiedad).</string>

    <!-- App Nav -->
    <string name="bottom_nav_home">Inicio</string>
    <string name="bottom_nav_search">Buscar</string>
    <string name="bottom_nav_profile">Perfil</string>

    <!-- Activity -->
    <!-- Register -->
    <string name="confirmPassword">Confirma tu contraseña</string>
    <string name="passwordsNotMatch">¡Las contraseñas no coinciden!</string>
    <string name="someEmptyFieldsError">¡Algun campo está vacío!</string>
    <!-- OnBoarding -->
    <string name="onBoarding_start">Comenzar</string>
    <string name="onBoarding_item_welcome_title">¡Bienvenido a DJ Experience!</string>
    <string name="onBoarding_item_welcome_description">En esta app encontrarás todo lo que necesitas sobre los DJs.</string>
    <string name="onBoarding_item_account_title">Con sistema de cuentas</string>
    <string name="onBoarding_item_account_description">Tienes que iniciar sesión para usar la aplicación, porque sincroniza todos tus datos (a quién sigues y otros).</string>
    <string name="onBoarding_item_intro_title">Rápida introducción:</string>
    <string name="onBoarding_item_intro_description">Sólo tienes que buscar tus artistas favoritos (minúsculas sensibles y sin espacios) y crear tus propios DJs.</string>
    <!-- Profile -->
    <string name="edit_profile">Editar perfil</string>
    <string name="artistsFollowing">Artistas que sigue:</string>
    <string name="name">Nombre</string>
    <string name="surnames">Apellidos</string>
    <string name="username">Nombre de usuario</string>
    <string name="category">Categoría</string>
    <string name="country">País</string>
    <string name="age">Edad</string>
    <string name="ageInfo">"Edad: %1$s"</string>
    <string name="website">Web</string>
    <string-array name="user_categories">
        <item>User</item>
        <item>Artist</item>
    </string-array>
    <!-- Search -->
    <string name="search">Buscar</string>
    <string name="search_hint">¡Realiza una búsqueda\npara encontrar a tus\nartistas favoritos!\n(Click al icono de búsqueda)</string>
    <string name="searchSV_hint">¡Nombre EXACTO!</string>
    <string name="searchAll">Ver todos los artistas y usuarios</string>
    <!-- Home -->
    <string name="news">Noticias</string>
    <string name="author"><b>Propietario:</b> %1$s</string>
    <string name="title"><b>Título:</b> %1$s</string>
    <string name="description"><b>Descripción:</b> %1$s</string>
    <string name="createArtist">Crear artista</string>
    <!-- Profile details -->
    <string name="artist_demo">¡Demo encontrada! %1$s demo:</string>
    <!-- Settings -->
    <string name="contact">Contacto</string>
    <string name="deleteAccount">Eliminar cuenta</string>
    <string name="clearCache">Eliminar la caché</string>
    <string name="userIsAwareToDeleteAccQuestion">¿Estás seguro de que quieres eliminar tu cuenta?</string>
    <string name="userIsAwareToDeleteAccDescription">Perderás todos tus datos.</string>
    <string name="wisechoice">¡Sabia decisión!</string>
    <!-- Contact -->
    <string name="contact_content">Contenido del mensaje informativo, de queja, o de retroalimentación…</string>
    <!-- Copyright -->
    <string name="copyright">© Copyright - DJ Experience\n\nNo recopilamos música con derechos de propiedad de sus artistas, sólo ponemos un trozo corto como demostración y vinculamos referencias a su contenido. Sólo se utiliza información pública.\n\nTodos los derechos reservados,\ncreador de DJ Experience.</string>

    <!-- Errors -->
    <string name="signInError">Error al intentar iniciar sesión</string>
    <string name="signUpError">Error al registrarse: %1$s</string>
    <string name="noPermissionsError">You don\'t have permissions.</string>
    <string name="subject">Asunto</string>
    <string name="inputNotValidError">¡Campo no valido!</string>
</resources>