<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.view.activities.SettingsActivity">

    <ImageView
        android:id="@+id/settings_close"
        android:layout_width="@dimen/image_size_small"
        android:layout_height="@dimen/image_size_small"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/text_separation_small"
        android:src="@drawable/ic_baseline_close_24"
        android:translationZ="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold"
        android:theme="@style/InfoTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_clearCache"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/color_secondary"
            android:contentDescription="@string/defaultImageDescription"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/clearCache"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:cornerRadius="@dimen/onBoarding_cornerSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_deleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/color_secondary"
            android:contentDescription="@string/defaultImageDescription"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/deleteAccount"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:cornerRadius="@dimen/onBoarding_cornerSize" />
    </LinearLayout>

</LinearLayout>