<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.profile.edit.EditProfileFragment">

    <ImageView
        android:id="@+id/fragment_editprofile_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:translationZ="1dp"
        android:contentDescription="@string/defaultImageDescription"
        android:src="@drawable/ic_baseline_close_24" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/editprofile_fragmentProgressBar"
        android:name="com.feryaeldev.djexperience.ui.common.loading.LoadingFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:layout="@layout/fragment_loading" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/editprofile_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editprofile_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:errorContentDescription="@string/defaultImageDescription"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/defaultImageDescription"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editprofile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:errorContentDescription="@string/defaultImageDescription"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/defaultImageDescription"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editprofile_surnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surnames"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:errorContentDescription="@string/defaultImageDescription"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/defaultImageDescription"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editprofile_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:endIconMode="clear_text"
            app:errorContentDescription="@string/defaultImageDescription"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/defaultImageDescription"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editprofile_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="120"
            app:endIconMode="clear_text"
            app:errorContentDescription="@string/defaultImageDescription"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/defaultImageDescription"
            app:startIconDrawable="@drawable/ic_baseline_public_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editprofile_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                android:inputType="textWebEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/editprofile_category_sp"
            android:layout_width="300dp"
            android:layout_height="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editprofile_saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/color_secondary"
            android:contentDescription="@string/defaultImageDescription"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:cornerRadius="@dimen/onBoarding_cornerSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>